feat: Added Card entity and ShedLock integration
- Implemented automatic CVV, issueDate, and expiryDate generation for Card creation.
- Added enum support for Debit, Credit, VISA, and MASTERCARD types.
- Integrated ShedLock to prevent concurrent execution of scheduled tasks.
- Applied necessary schema changes using Liquibase.
Closes #ShedLockIntegration